feat: add App download

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="app-down">
             <i class="close icon-close"></i>
             <a href="#">
-                <img src="images/app-down.png" alt="">
+                <img data-i18n-src="appDownImg"  alt="">
             </a>
         </div>
         <!--/. 顶部下载提示 -->
@@ -360,6 +360,8 @@
         linkUrl : "#/service" //客服地址
     });*/
 
+    //顶部下载
+    hasAppDown()
 </script>
 <script>
 
