--- a/onlinepaystart.html
+++ b/onlinepaystart.html
@@ -87,6 +87,133 @@
                                     </div>
                                 </div>
 
+                                <!-- 勾选银行 20201110 -->
+                                <div class="cards-header-only">
+                                    <div class="card ">
+                                        <div class="card-header">
+                                            <label>
+                                                <input type="radio" name="bankaccount" />
+                                                <span class="">
+                                                <img  src="./images/banklogo/maybank.png" height="32" width="32" style="vertical-align: middle; "/>
+                                                <span style="vertical-align: middle;">Maybank Berhad</span>
+                                            </span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <label>
+                                                <input type="radio" name="bankaccount" />
+                                                <span class="">
+														<img  src="./images/banklogo/cimbbank.png" height="32" width="32" style="vertical-align: middle; "/>
+														<span style="vertical-align: middle;">CIMB Bank Berhad</span>
+													</span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <label >
+                                                <input type="radio" name="bankaccount" />
+                                                <span class="">
+                                            <img  src="./images/banklogo/ABB-Affin-Bank.png" height="32" width="32" style="vertical-align: middle; "/>
+                                            <span style="vertical-align: middle;">Affin Bank</span>
+                                        </span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <label >
+                                                <input type="radio" name="bankaccount" />
+                                                <span class="">
+                                            <img  src="./images/banklogo/ABMB-Alliance-Bank.png" height="32" width="32" style="vertical-align: middle; "/>
+                                            <span style="vertical-align: middle;">Alliance Bank</span>
+                                        </span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <label >
+                                                <input type="radio" name="bankaccount" />
+                                                <span class="">
+                                            <img  src="./images/banklogo/ambank.png" height="32" width="32" style="vertical-align: middle; "/>
+                                            <span style="vertical-align: middle;">AmBank</span>
+                                        </span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <label >
+                                                <input type="radio" name="bankaccount" />
+                                                <span class="">
+														<img  src="./images/banklogo/hong-leong-bank.png" height="32" width="32" style="vertical-align: middle; "/>
+														<span style="vertical-align: middle;">Hong Leong Bank</span>
+													</span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <label >
+                                                <input type="radio" name="bankaccount" />
+                                                <span class="">
+														<img  src="./images/banklogo/hsbcbank.png" height="32" width="32" style="vertical-align: middle; "/>
+														<span style="vertical-align: middle;">HSBC Bank</span>
+													</span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <label >
+                                                <input type="radio" name="bankaccount" />
+                                                <span class="">
+														<img  src="./images/banklogo/ocbcbank.png" height="32" width="32" style="vertical-align: middle; "/>
+														<span style="vertical-align: middle;">OCBC Bank</span>
+													</span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <label >
+                                                <input type="radio" name="bankaccount" />
+                                                <span class="">
+														<img  src="./images/banklogo/publicbank.png" height="32" width="32" style="vertical-align: middle; "/>
+														<span style="vertical-align: middle;">Public Bank</span>
+													</span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <label >
+                                                <input type="radio" name="bankaccount" />
+                                                <span class="">
+														<img  src="./images/banklogo/rhbbank.png" height="32" width="32" style="vertical-align: middle; "/>
+														<span style="vertical-align: middle;">RHB Bank</span>
+													</span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <label >
+                                                <input type="radio" name="bankaccount" />
+                                                <span class="">
+														<img  src="./images/banklogo/uob-bank.png" height="32" width="32" style="vertical-align: middle; "/>
+														<span style="vertical-align: middle;">UOB Bank</span>
+													</span>
+                                            </label>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <!--/. 勾选银行 -->
+
                                 <!--/. 选择银行 -->
                                 <div class="content-block">
                                     <p><a href="#" class="button button-big button-round button-fill button-warning" data-i18n-text="btnSubmit"> </a></p>
@@ -127,7 +254,6 @@
                                                 <span style="vertical-align: middle;">Maybank Berhad</span>
                                             </span>
                                             </label>
-
                                         </div>
                                         <div class="card-content card-bank-account">
                                             <div class="card-content-inner" >
