feat: 上传凭证显示

--- a/onlinepaystart.html
+++ b/onlinepaystart.html
@@ -351,6 +351,12 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- upload file 20201117 -->
+                                    <div class="upload-img-file">
+                                        <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1605632276254&di=18e488e7445a1a8bada6d970f7baae9c&imgtype=0&src=http%3A%2F%2Fpic.pc6.com%2Fup%2F2011-12%2F20111212991527305931.jpg" alt="">
+                                        <a href="#" class="file-delete fa fa-trash-o"> 删除</a>
+                                    </div>
+                                    <!--/. upload file -->
                                 </div>
 
                                 <div class="content-block">
