feat: 上传凭证显示

--- a/onlinepaystart.html
+++ b/onlinepaystart.html
@@ -49,6 +49,11 @@
                     <a href="#tab1" class="tab-link active button">Pay Online</a>
                     <a href="#tab2" class="tab-link button">Bank Transfer</a>
                 </div>
+                <!-- 提款承诺 -->
+                <div class="" style="padding:0.3rem 0.4rem;margin-top: 0.5rem;color: #f9bb22;font-size: 0.75rem;background-color: #2f1355;border-radius: 8px;border: 3px solid #391964;">
+                    <b>轻松提款，100%出款，10分钟内出款到账。</b>
+                </div>
+                <!--/. 提款承诺 -->
                 <div class="content-block">
                     <div class="tabs">
                         <div id="tab1" class="tab active">
@@ -70,8 +75,11 @@
                                         <li><a href="javascript:void(0)">20000</a></li>
                                     </ul>
                                 </div>
-                                <!-- 选择银行 -->
 
+
+
+
+                                <!-- 选择银行 -->
                                 <div class="item-title row-tit"> <span data-i18n-text="bankName">Bank name</span> <span class="c-red">*</span></div>
                                 <div class="list-block">
                                     <div class="item-content ">
@@ -242,6 +250,8 @@
                                         <li><a href="javascript:void(0)">20000</a></li>
                                     </ul>
                                 </div>
+
+
 
                                 <div class="">
                                     <div class="item-title row-tit"> <span data-i18n-text="BankAccount">Bank Account</span> <span class="c-red">*</span></div>
